--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@
 }
 
 @layer base {
+  section {
+    @apply min-h-svh tablet:min-h-[calc(100svh-5rem)] overflow-hidden;
+  }
   h1 {
     @apply text-5xl font-bold;
   }
