--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
 
 @layer base {
   section {
-    @apply min-h-svh tablet:min-h-[calc(100svh-5rem)] overflow-x-hidden;
+    @apply min-h-svh overflow-x-hidden;
   }
   h1 {
     @apply text-5xl font-bold;
